# guncruft

./: Cargo.toml  flake.nix  readme.md
src/: main.rs
src/environment/: block.rs  chunk.rs  cube.rs  engine.rs  face_direction.rs  mesher.rs  mod.rs  plugin.rs  rendering.rs  scanner.rs  utils.rs
src/player/: creative_mode.rs  fps_camera.rs  fps_movement.rs  mod.rs  player.rs
