[package]
name = "guncruft"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]


[dependencies]
# On release, disable dynamic linking.
bevy = { version = "=0.16.0", features = ["dynamic_linking"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
